MDEV-6990 GROUP_MIN_MAX optimization is not applied in some cases when it could